--- a/language/es.json
+++ b/language/es.json
@@ -1,7 +1,7 @@
 {
     "___creditos": {
-        "___Contribuidor": "https://github.com/jeffersonalionco",
-        "___Criador": "https://github.com/BrunoSobrino"
+        "___Contribuidor": "https://github.com/Cristian-YTE",
+        "___Criador": "https://github.com/Cristian-YTE"
     },
     "plugins": {
         "_antiarab": {
@@ -2896,14 +2896,14 @@
         "menu_labiblia": {
             "texto1": [
                 "*[❗] Los comandos +18 están desactivados en este grupo, si es admin y desea activarlos use",
-                "*𝗛ola",
-                "*< MENU+18 />*",
+                "*Hola",
+                "*< MENU +18 />*",
                 "*[❗𝐈𝐍𝐅𝐎❗] 𝙴𝙻 𝙼𝙴𝙽𝚄 𝚃𝙸𝙴𝙽𝙴 𝚄𝙽 𝙴𝚁𝚁𝙾𝚁 𝚈 𝙽𝙾 𝙵𝚄𝙴 𝙿𝙾𝚂𝙸𝙱𝙻𝙴 𝙴𝙽𝚅𝙸𝙰𝚁𝙻𝙾, 𝚁𝙴𝙿𝙾𝚁𝚃𝙴𝙻𝙾 𝙰𝙻 𝙿𝚁𝙾𝙿𝙸𝙴𝚃𝙰𝚁𝙸𝙾 𝙳𝙴𝙻 𝙱𝙾𝚃*"
             ]
         },
         "menu_menu": {
             "texto1": [
-                "𝙏𝙃𝙀 𝙈𝙔𝙎𝙏𝙄𝘾 - 𝘽𝙊𝙏",
+                "𝙎𝙃𝘼𝘿𝙊𝙒 𝘽𝙊𝙏 - 𝙎𝙓",
                 "▢ *Hola,*",
                 "_*< TUS ESTADÍSTICAS />*_",
                 "▢ *Nivel:* ",
