--- a/language/es.json
+++ b/language/es.json
@@ -2902,8 +2902,8 @@
             ]
         },
         "menu_menu": {
-            /*"texto1": [
-                "𝙎𝙃𝘼𝘿𝙊𝙒 𝘽𝙊𝙏 - 𝙎𝙓",
+            "texto1": [
+                /*"𝙎𝙃𝘼𝘿𝙊𝙒 𝘽𝙊𝙏 - 𝙎𝙓",
                 "▢ *Hola,*",
                 "_*< TUS ESTADÍSTICAS />*_",
                 "▢ *Nivel:* ",
