--- a/language/es.json
+++ b/language/es.json
@@ -2905,7 +2905,7 @@
             "texto1": [
                 "```SHADOW BOT```",
                 "ⓘ *Hola,*",
-                "```TUS ESTADÍSTICAS```",
+                "TUS ESTADÍSTICAS",
                 "▢ *Nivel:* ",
                 "▢ *Experiencia:* ",
                 "▢ *Rango:* ",
@@ -2913,25 +2913,25 @@
                 "▢ *ShadowCoins:* ",
                 "▢ *Tokens:* ",
                 "▢ *Premium:* ",
-                "```LISTA DE MENUS```",
-                "```SOBRE EL BOT```",
-                "_*< SUB-BOTS />*_",
-                "_*< JUEGOS />*_",
-                " _*< ACT./DESACT. FUNC. />*_",
-                " _*< DESCARGAS />*_",
-                " _*< BUSCADORES />*_",
-                " _*< GRUPOS />*_",
-                "_*< CONVERTIDORES />*_",
-                " _*< EFECTOS & LOGOS />*_",
-                " _*< FRASES & TEXTOS />*_",
-                " _*< ALEATORIO />*_",
-                " _*< EFECTOS P. AUDIOS />*_",
-                "*- Responde a un audio o nota de voz.*",
-                "_*< CHAT ANÓNIMO />*_",
-                "_*< HERRAMIENTAS />*_",
-                " _*< ECONOMÍA />*_",
-                " _*< STICKERS />*_",
-                "_*< PROPIETARIO Y MODS. />*_",
+                "LISTA DE MENÚS",
+                "SOBRE EL BOT",
+                "SUB-BOTS",
+                "JUEGOS",
+                "ACTIVAR & DESACTIVAR",
+                "DESCARGAS",
+                "BUSCADORES",
+                "GRUPOS",
+                "CONVERTIDORES",
+                "EFECTOS & LOGOS",
+                "FRASES & TEXTOS",
+                "ALEATORIO",
+                "EFECTOS P. AUDIOS",
+                "ⓘ Responde a un audio.",
+                "CHAT ANÓNIMO",
+                "HERRAMIENTAS",
+                "ECONOMÍA",
+                "STICKERS",
+                "PROPIETARIO Y MODS",
                 "*[ ℹ️ ] Este menu tiene un error interno, por lo cual no fue posible enviarlo.*",
                 "*<opcion> <tiempo>*_",
                 "(sin prefijo)",
